# poly-v2

./: .gitignore  README.md  conftest.py  demo_async_runner_local.py  demo_live_combined.py  demo_live_decision.py  demo_live_paper.py  demo_live_readonly.py  demo_live_rtds.py  demo_paper_local.py  execution.py  heartbeat.py  paper_bot_stop055_C.py  ptb.py  pyproject.toml  pytest.ini  quote_policy.py  recorder.py  replay.py  risk.py  settings.py  test_local_stack.py  types.py  ws_market.py  ws_user.py
bot/: async_runner.py  campaign_report.py  domain.py  fair_value.py  heartbeat.py  latency.py  live_combined.py  live_decision.py  live_paper.py  live_readonly.py  live_rtds.py  m5_attribution.py  m5_session.py  m5_summary.py  paper_campaign.py  paper_journal.py  ptb.py  recorder.py  replay.py  risk.py  settings.py  state.py
demos/: bootstrap_check.py  demo_async_runner_local.py  demo_btc_m5.py  demo_btc_m5_live.py  demo_campaign.py  demo_eth_m5_live.py  demo_limit_order_test.py  demo_live_combined.py  demo_live_decision.py  demo_live_paper.py  demo_live_readonly.py  demo_live_rtds.py  demo_paper_local.py
deploy/: btc_m5.service  install.sh  vps_setup.md
docs/: reconstruction_map.md
offline/: data_types.py  engine.py  reporting.py  run_backtest.py  strategy_interface.py
scripts/: setup_wizard.py
tests/: test_attribution.py  test_backtest_engine.py  test_btc_m5_strategy.py  test_composite_signal.py  test_directional_v2.py  test_fair_value.py  test_latency.py  test_live_combined.py  test_live_decision.py  test_live_paper.py  test_live_readonly.py  test_live_rtds.py  (+8 more)
(+31 files in other folders)
