[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poly-v2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "eth-account>=0.10",
    "uvloop>=0.19; sys_platform != 'win32'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
